# personal_agent

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  start-dev.ps1  start.py
app/api/: routes.py  schemas.py
app/api/routers/: chat.py  documents.py  health.py  memories.py  users.py
app/core/: config.py  milvus_client.py  mongodb_client.py
app/services/: embedding_service.py  llm_service.py  memory_service.py  rag_service.py  user_service.py
app/utils/: text_processor.py
config/: settings.yaml
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: Chat.tsx  Documents.tsx  Memories.tsx  UserSidebar.tsx
test/: test_api.py  test_llm.py  test_rag_complete.py
